syntax = "proto3";

option java_multiple_files = true;
option java_package = "live.manager";
option java_outer_classname = "LiveGrpcProto";

package live;

service LiveGrpc {
    rpc FindOneBySlug (SlugRequest) returns (LiveResponse) {}
    rpc Login (LoginRequest) returns (LiveResponse) {}
}

message LoginRequest {
    string slug = 1;
    string password = 2;
}

message SlugRequest {
    string slug = 1;
}

message LiveResponse {
    string slug = 2;
    string title = 3;
    string description = 4;
    string status = 5;
    string created_at = 6;
}
